# Research_hunter

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
configs/: scoring_config.example.json
docs/: api_setup.md  architecture.md  scoring_methodology.md
research_hunter/: cli.py  offline_analyzer.py  scoring.py
research_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
research_hunter/clients/: semantic_scholar.py
samples/: sample_corpus.json  sample_results.csv  sample_results.json
